make page scrollabel to prevent overflows

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body,
 .app,
 .content {
    height: 100%;
+   overflow-y: auto;
    width: 100%;
    font-family: "Source Sans Pro", sans-serif;
 }
